--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,24 +1,16 @@
 {% extends '_base.html' %} {% load socialaccount %}
-
+{% load tailwind_filters %}
 {% block content %}
 
-<div class="container" style="text-align: center; padding-top: 10%;">
-    <h1>Django Social Login</h1>
 
-    <br /><br />
-    
-    {% if user.is_authenticated %}
-    <h3>Welcome {{ user.username }} !!!</h3>
-    <br /><br />
-    <a href="{% url 'account_logout' %}" class="btn btn-danger">Logout</a>
-    {% else %}
-    <h2>Log In</h2>
-    <form method="post">
+
+<div class="w-full max-w-2xl mx-auto sm:px-6 lg:px-8">
+    <h1 class="text-4xl font-bold mb-8">Log In</h1>
+    <form method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-danger">Log In</button>
+        {{ form|crispy }}
+        <button class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Submit</button>
     </form>
-    {% endif %}
 </div>
 
 {% endblock content %}
