--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -1,5 +1,5 @@
-{% extends '_base.html' %} {% load socialaccount %}
-
+{% extends "_base.html" %}
+{% block title %}My Blog{% endblock %}
 {% block content %}
 <main class="container mx-auto mt-8">
     <div class="bg-gray-200 py-24 sm:py-32">
@@ -20,7 +20,7 @@
                     </div>
                     <div class="group relative">
                         <h3 class="mt-3 text-lg/6 font-semibold text-gray-900 group-hover:text-gray-600">
-                            <a href="" {% url 'blog:post_detail' post.id %}"">
+                            <a href=" {% url 'blog:post_detail' post.id %}">
                                 <span class="absolute inset-0"></span>
                                 {{ post.title }}
                             </a>
@@ -52,22 +52,4 @@
 
 </main>
 
-
-
-<!-- <div class="flex items-center justify-center h-screen">
-    {% if user.is_authenticated %}
-    <h3>Welcome {{ user.username }} !!!</h3>
-    <br /><br />
-    <a href="{% url 'account_logout' %}" class="btn btn-danger">Logout</a>
-    {% else %}
-    <a href="{% url 'account_login' %}" ><button type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Log In</button></a>
-    <a href="{% url 'account_signup' %}" ><button type="button" class="focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Sign Up</button></a>
-    {% endif %}
-    <div class="bg-indigo-800 text-white font-bold rounded-lg border shadow-lg p-10">
-        Centered Content
-    </div>
-
-</div> -->
-
-
-{% endblock content %}
+{% endblock %}
