--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -16,11 +16,11 @@
                     <div class="flex items-center gap-x-4 text-xs">
                         <time datetime="2020-03-16" class="text-gray-500">{{ post.publish }}</time>
                         <a href="#"
-                            class="relative z-10 rounded-full bg-yellow-100 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Marketing</a>
+                            class="relative z-10 rounded-full bg-yellow-100 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Шпоры</a>
                     </div>
                     <div class="group relative">
                         <h3 class="mt-3 text-lg/6 font-semibold text-gray-900 group-hover:text-gray-600">
-                            <a href=" {% url 'blog:post_detail' post.id %}">
+                            <a href=" {{ post.get_absolute_url }}">
                                 <span class="absolute inset-0"></span>
                                 {{ post.title }}
                             </a>
@@ -43,10 +43,8 @@
                     </div>
                 </article>
                 {% endfor %}
-
-
-                <!-- More posts... -->
             </div>
+            {% include "pagination.html" with page=page_obj %}
         </div>
     </div>
 
