--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -127,6 +127,9 @@
         </div>
         <div class="bg-white rounded-lg p-3 my-2">
             {{ post.body }}
+            <p>
+              <a href="{% url 'blog:post_share' post.id %}">Share this post by e-mail</a>
+            </p>
             <!-- <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
 
 
