--- a/templates/_base.html
+++ b/templates/_base.html
@@ -3,9 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <script src="https://cdn.tailwindcss.com"></script>-->
+    <!--<script src="https://cdn.tailwindcss.com"></script>-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% tailwind_css %}
     <title>Django Social Login</title>
